--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,9 @@ environment:
   sdk: '>=2.14.3 <3.0.0'
 
 
-# dependencies:
-#   path: ^1.7.0
-
 dev_dependencies:
-  build_runner: ^1.10.0
-  build_web_compilers: ^2.11.0
+  build_runner: ^2.1.7
+  build_web_compilers: ^3.2.2
   lints: ^1.0.0
 dependencies: 
-  rxdart: ^0.27.3
+  json_serializable: ^6.1.3 
